// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticated renders error if fetching profile fails 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    />
  </div>
</DocumentFragment>
`;

exports[`Authenticated renders info about the user and a log out button 1`] = `
<DocumentFragment>
  <p>
    [Translation for https://example.com/global/translations.ttl#loggedIn does not exist]
  </p>
  <div
    role="button"
    tabindex="0"
  >
    <button
      type="button"
    >
      [Translation for https://example.com/global/translations.ttl#logOut does not exist]
    </button>
  </div>
</DocumentFragment>
`;

exports[`Authenticated renders loading while fetching profile 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
